testdata/baselines/reference/submodule/compiler/checkJsFiles7.errors.txt
a.js(4,3): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== a.js (1 errors) ====
    class C {
    	constructor() {
    		/** @type {boolean} */
    		this.a = true;
    		~~~~~~~~~~~~~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    		this.a = !!this.a;
    	}
    }